Revert "feat(front-assessment): create styled template"
This reverts commit 1ab98f0efc5fa3339fd1d9891a8cf6b3cd91911e.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 @import "./variables.css";
 @import "./mixins.css";
 
-/* ========================== Reset ========================== */
+/* reset */
 body,
 p,
 a,
@@ -15,653 +15,35 @@ li {
   list-style-type: none;
 }
 
-/* ========================== Main styles ========================== */
+/* base styles */
 body {
   background: var(--primary);
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
 
-.button {
-  display: inline-block;
-  background: #55b8f0;
-  color: var(--primary);
-  border-radius: 30px;
-  padding: 12px 0;
-  font-weight: 500;
-  font-size: 0.8em;
-  line-height: 12px;
-  text-align: center;
-  width: 216px;
+/* fonts */
+h1,
+h2,
+h3,
+h4 {
+  font-weight: normal;
+  line-height: 1.4em;
 }
-
-.button:hover {
-  filter: brightness(95%);
+p,
+a,
+li {
+  color: #9893d8;
+  line-height: 1.4em;
+  font-size: 1em;
 }
-
-.block-title {
+h1,
+h3 {
+  font-size: 1.2em;
+}
+h2 {
   font-size: 1.6em;
-  font-weight: 600;
-  color: var(--primary-font-color);
 }
-
-.block-small-title {
+h4 {
   font-size: 1.1em;
-  font-weight: 500;
-  color: var(--secondary-font-color);
-}
-
-.block-description {
-  font-size: 1em;
-  font-weight: 400;
-  color: var(--primary-font-color);
-}
-
-.container {
-  margin: 60px 15%;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 10px;
-  box-sizing: border-box;
-}
-
-.container .block-title,
-.block-small-title,
-.block-description {
-  margin: 8px 0;
-}
-
-.container .button {
-  display: block;
-  margin: 0 auto;
-}
-
-select {
-  padding: 0 5px;
-  margin-left: 10px;
-  width: 60px;
-  height: 25px;
-  border: 1px solid #a4a3ad;
-  border-radius: 4px;
-  font-size: inherit;
-  line-height: inherit;
-  z-index: 1;
-  color: #5c5c6c;
-}
-
-.chevron-down {
-  @apply --chevron-mixin;
-  position: relative;
-}
-.chevron-down::after {
-  content: "";
-  display: block;
-  box-sizing: border-box;
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  border-bottom: 2px solid;
-  border-right: 2px solid;
-  transform: rotate(45deg);
-  left: 4px;
-  top: 2px;
-}
-
-.chevron-left {
-  @apply --chevron-mixin;
-  position: relative;
-}
-.chevron-left::after {
-  content: "";
-  display: block;
-  box-sizing: border-box;
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  border-bottom: 2px solid;
-  border-right: 2px solid;
-  transform: rotate(135deg);
-  left: 4px;
-  top: 2px;
-}
-
-.chevron-right {
-  @apply --chevron-mixin;
-  position: relative;
-}
-.chevron-right::after {
-  content: "";
-  display: block;
-  box-sizing: border-box;
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  border-bottom: 2px solid;
-  border-right: 2px solid;
-  transform: rotate(-45deg);
-  left: 4px;
-  top: 2px;
-}
-/* ========================== End Main styles ========================== */
-
-/* ========================== Navigation ========================== */
-.site-nav {
-  overflow: hidden;
-  background-color: var(--primary);
-}
-
-.toggle,
-[id^="drop"] {
-  display: none;
-}
-
-nav {
-  margin: 0;
-  padding: 0;
-  background-color: var(--primary);
-  padding: 0 15%;
-}
-
-#logo {
-  display: flex;
-  align-items: center;
-  margin-left: 0;
-  padding-left: 0;
-  float: left;
-  margin: 30px 0;
-}
-
-#logo span {
-  font-size: 0.8em;
-  font-weight: 700;
-  line-height: 1.2em;
-  margin-left: 10px;
-  text-transform: uppercase;
-  color: var(--primary-font-color);
-}
-
-nav:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-nav ul {
-  float: right;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  position: relative;
-}
-
-nav ul li {
-  margin: 0px;
-  display: inline-block;
-  float: left;
-  background-color: var(--primary);
-}
-
-nav ul li i {
-  margin-left: 5px;
-}
-
-nav a {
-  display: block;
-  padding: 14px 20px;
-  text-decoration: none;
-  color: var(--primary-font-color);
-  font-size: 0.9em;
-  text-transform: uppercase;
-  text-align: left;
-  font-weight: 600;
-}
-
-nav a:hover {
-  background-color: var(--gray-color);
-}
-
-nav ul ul {
-  display: none;
-  position: absolute;
-}
-
-nav ul li:hover > ul {
-  display: inherit;
-  z-index: 1;
-}
-
-nav ul ul li {
-  width: 170px;
-  float: none;
-  display: list-item;
-  position: relative;
-  z-index: 1;
-}
-
-.menu {
-  margin-top: 20px;
-}
-
-.menu-icon > .line {
-  background-color: var(--primary-font-color);
-  height: 2px;
-  display: block;
-}
-.menu-icon > .line + .line {
-  margin-top: 8px;
-}
-
-.main-toggle {
-  width: 40px;
-}
-
-.main-toggle:hover {
-  background: var(--primary);
-}
-
-#burger {
-  width: 40px;
-  height: 20px;
-  position: relative;
-  margin: 10px auto;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: 0.5s ease-in-out;
-  -moz-transition: 0.5s ease-in-out;
-  -o-transition: 0.5s ease-in-out;
-  transition: 0.5s ease-in-out;
-  cursor: pointer;
-}
-
-#burger span {
-  display: block;
-  position: absolute;
-  height: 5px;
-  width: 100%;
-  background: var(--primary-font-color);
-  border-radius: 9px;
-  opacity: 1;
-  left: 0;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: 0.25s ease-in-out;
-  -moz-transition: 0.25s ease-in-out;
-  -o-transition: 0.25s ease-in-out;
-  transition: 0.25s ease-in-out;
-}
-
-#burger span:nth-child(1) {
-  top: 0px;
-}
-
-#burger span:nth-child(2) {
-  top: 10px;
-}
-
-#burger span:nth-child(3) {
-  top: 20px;
-}
-
-#burger.open span:nth-child(1) {
-  top: 10px;
-  -webkit-transform: rotate(135deg);
-  -moz-transform: rotate(135deg);
-  -o-transform: rotate(135deg);
-  transform: rotate(135deg);
-}
-
-#burger.open span:nth-child(2) {
-  opacity: 0;
-  left: -60px;
-}
-
-#burger.open span:nth-child(3) {
-  top: 10px;
-  -webkit-transform: rotate(-135deg);
-  -moz-transform: rotate(-135deg);
-  -o-transform: rotate(-135deg);
-  transform: rotate(-135deg);
-}
-/* ========================== End Navigation ========================== */
-
-/* ========================== Hero Block ========================== */
-#hero-block {
-  display: grid;
-  background-image: url("../assets/images/hero.png");
-  height: 400px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
-#hero-text .block-title {
-  margin-bottom: 25px;
-}
-
-#hero-text {
-  text-align: left;
-  color: white;
-}
-
-#hero-text div {
-  position: absolute;
-  top: 25%;
-}
-/* ========================== End Hero Block ========================== */
-
-/* ========================== Tenant Block ========================== */
-#tenant-img {
-  grid-column: 1;
-  grid-row: 1;
-}
-
-#tenant-img > img {
-  width: 100%;
-}
-
-#tenant-text {
-  grid-column: 1;
-  grid-row: 2;
-}
-/* ========================== End Tenant Block ========================== */
-
-/* ========================== Advertising Block ========================== */
-#advertising-img {
-  grid-column: 1;
-  grid-row: 1;
-}
-
-#advertising-img > img {
-  width: 100%;
-}
-
-#advertising-text {
-  grid-column: 1;
-  grid-row: 2;
-}
-/* ========================== End Advertising Block ========================== */
-
-/* ========================== Agents Block ========================== */
-.agents-table {
-  width: 100%;
-  text-align: left;
-  border-collapse: collapse;
-  box-shadow: 0 0 0 1px var(--gray-color);
-  border-radius: 4px;
-  overflow: hidden;
-}
-
-.agents-table thead,
-tfoot {
-  background: var(--table-accent-color);
-}
-
-.agents-table th {
-  font-size: 1em;
-  font-weight: 700;
-  color: var(--primary-font-color);
-}
-
-.agents-table td {
-  font-size: 1em;
-  font-weight: 400;
-  color: var(--dark-color);
-}
-
-.agents-table tbody td {
-  border-top: 1px solid var(--gray-color);
-  border-bottom: 1px solid var(--gray-color);
-}
-
-.agents-table td,
-.agents-table th {
-  padding: 15px 20px;
-}
-
-.agents-table tfoot td i {
-  margin: 0 10px;
-  vertical-align: middle;
-}
-
-.agents-table tfoot td i:first-of-type {
-  margin-left: 30px;
-  color: var(--gray-color);
-}
-
-.agents-table caption {
-  margin: 5px 0;
-}
-/* ========================== End Agents Block ========================== */
-
-/* ========================== Footer ========================== */
-.footer-td div {
-  margin: 0 auto;
-  text-align: center;
-}
-
-footer {
-  background-color: var(--primary-font-color);
-  width: 100%;
-  padding: 20px 0;
-  text-align: center;
-}
-
-.copyright {
-  color: var(--primary);
-  font-size: 1em;
-  font-weight: 400;
-}
-
-.copyright a {
-  color: var(--primary);
-  text-decoration: underline;
-}
-/* ========================== End Footer ========================== */
-
-@media all and (max-width: 1100px) {
-  #logo {
-    width: 100%;
-    justify-content: space-between;
-  }
-
-  nav {
-    margin: 0;
-  }
-
-  .toggle + a,
-  .menu {
-    display: none;
-  }
-
-  .toggle {
-    display: block;
-    background-color: var(--primary);
-    padding: 14px 20px 14px 0;
-    color: var(--primary-font-color);
-    text-decoration: none;
-    border: none;
-    font-size: 0.9em;
-    text-transform: uppercase;
-    text-align: left;
-    font-weight: 600;
-  }
-
-  .toggle:hover {
-    background-color: var(--gray-color);
-  }
-
-  nav a {
-    padding-left: 0;
-  }
-
-  [id^="drop"]:checked + ul {
-    display: block;
-  }
-
-  nav ul li {
-    display: block;
-    width: 100%;
-  }
-
-  nav ul ul .toggle,
-  nav ul ul a {
-    padding: 0 40px;
-  }
-
-  nav ul ul ul a {
-    padding: 0 80px;
-  }
-
-  nav a:hover,
-  nav ul ul ul a {
-    background-color: var(--gray-color);
-  }
-
-  nav ul li ul li .toggle,
-  nav ul ul a,
-  nav ul ul ul a {
-    padding: 14px 20px;
-    color: var(--primary-font-color);
-  }
-
-  nav ul li ul li .toggle,
-  nav ul ul a {
-    background-color: var(--primary);
-  }
-
-  nav ul ul {
-    float: none;
-    position: static;
-    color: var(--primary-font-color);
-  }
-
-  nav ul ul li:hover > ul,
-  nav ul li:hover > ul {
-    display: none;
-  }
-
-  nav ul ul li {
-    display: block;
-    width: 100%;
-  }
-
-  .agents-table thead {
-    border: none;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-  }
-
-  .agents-table tr {
-    border-bottom: 3px solid var(--gray-color);
-    display: block;
-  }
-
-  .agents-table td {
-    border-bottom: 1px solid var(--gray-color);
-    display: block;
-    font-size: 0.8em;
-    text-align: right;
-  }
-
-  .agents-table td::before {
-    content: attr(data-label);
-    float: left;
-    font-weight: bold;
-  }
-
-  .agents-table td:last-child {
-    border-bottom: 0;
-  }
-
-  .agents-table th,
-  .agents-table td {
-    padding: 5px;
-  }
-
-  .footer-td i {
-    margin: 0 5px;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .block-title {
-    font-size: 2.6em;
-  }
-
-  .block-description {
-    font-size: 1.1em;
-  }
-
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-    box-sizing: border-box;
-  }
-
-  #tenant-img > img {
-    width: 90%;
-  }
-
-  #tenant-img {
-    grid-column: 1;
-    grid-row: 1;
-  }
-
-  #tenant-text {
-    grid-column: 2;
-    grid-row: 1;
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    justify-content: center;
-    width: 80%;
-  }
-
-  #tenant-text .block-title,
-  #advertising-text .block-title,
-  #agents-block .block-title {
-    font-size: 2.2em;
-  }
-
-  #agents-block .block-title {
-    margin-bottom: 40px;
-  }
-
-  #advertising-img > img {
-    width: 90%;
-  }
-
-  #advertising-img {
-    grid-column: 2;
-    grid-row: 1;
-    text-align: right;
-  }
-
-  #advertising-text {
-    grid-column: 1;
-    grid-row: 1;
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    justify-content: center;
-    width: 80%;
-  }
-
-  .container .button {
-    margin: 24px 0;
-  }
 }
